--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,7 @@
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             display: inline-block;
+        
             max-width: 600px;
         }
         .logos {
@@ -37,8 +38,8 @@
 <body>
     <div class="container">
         <div class="logos">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Logo_BSSN_%28Badan_Siber_dan_Sandi_Negara%29.png" alt="Logo BSSN">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/Kominfo-logo-new.png" alt="Logo Kominfo">
+            <img src="https://images.app.goo.gl/ycjGRDTTvHrzx3JQ8" alt="Logo BSSN">
+            <img src="https://images.app.goo.gl/h9sujh1mKYTtx1tU9" alt="Logo Kominfo">
         </div>
         <h1>Situs Diblokir</h1>
         <p>Situs ini telah disita oleh pemerintah karena melanggar Undang-Undang.</p>
