--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             display: inline-block;
-            height: 100vh;
+            height: 100%;
             max-width: 600px;
         }
         .logos {
